<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/applicationName"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtTitle" />

    <TextView
        android:id="@+id/descriptionId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/textPadding_10dp"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingRight="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/decription"
        android:textColor="@android:color/black"
        android:textSize="@dimen/descriptionSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:contentDescription="@string/imageDescription"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        app:srcCompat="@drawable/gadgets" />

    <Button
        android:id="@+id/buttonWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/buttonWelcome"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/ButtonSize" />

</LinearLayout>