<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gadgetImg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GadgetActivity">

    <TextView
        android:id="@+id/gadgetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/gadgetName"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtTitle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="332dp"
        android:contentDescription="@string/gadgetImage"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        app:srcCompat="@drawable/gadgets" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/textPadding_10dp"
        android:paddingBottom="@dimen/textPadding_10dp"
        android:text="@string/buttonGadgets"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/ButtonSize" />
</LinearLayout>